--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 	},
 	"devDependencies": {
 		"typescript": "^5.5.2",
-		"wrangler": "https://pkg.pr.new/wrangler@main"
+		"wrangler": "^4.20.3"
 	},
 	"dependencies": {
 		"@cloudflare/containers": "^0.0.7"
